Properly ordered the CMake commands to link libs

--- a/particle_game_core/CMakeLists.txt
+++ b/particle_game_core/CMakeLists.txt
@@ -19,5 +19,8 @@ file(GLOB_RECURSE HEADERS_LIST "*.hpp")
 # Add all specified source files to the library
 add_library(particle_game_core ${SOURCES_LIST} ${HEADERS_LIST})
 
+# Link the game essentials library
+target_link_libraries(particle_game_core LINK_PUBLIC game_essentials)
+
 # Ensure the library is discoverable in the project
 target_include_directories(particle_game_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
